# sossoldi-companion

./: .django-superuser-pw.sample  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TECHNICAL.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
sossoldicompanion/: asgi.py  settings.py  urls.py  wsgi.py
templates/includes/: footer.html  header.html
templates/registration/: login.html  logout.html
transactionmanager/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
transactionmanager/importers/: base_importer.py  n26_importer.py
transactionmanager/migrations/: 0001_initial.py
transactionmanager/services/: dispatcher.py  export.py
transactionmanager/static/transactionmanager/css/: base.css
transactionmanager/templates/: base.html
transactionmanager/templates/transactionmanager/: complete_profile.html  home_accounts.html  import_csv.html
transactionmanager/utils/: complete_profile_required_mixin.py  ensure_bank_account_mixin.py
